fix: favorites list overflow + dates initial values + refetch queries

--- a/src/components/FavoritesList/FavoritesList-styles.less
+++ b/src/components/FavoritesList/FavoritesList-styles.less
@@ -1,9 +1,27 @@
 .favorites-list {
 	width: 100%;
+	height: 100%;
+	display: grid;
+	grid-template-rows: min-content min-content auto;
 
-	.favorites-list__title {
+	&__title {
 		margin-top: unset;
 		margin-bottom: var(--ant-margin);
+	}
+
+	&__search {
+		margin-bottom: var(--ant-margin);
+	}
+
+	&__list {
+		height: 100%;
+		overflow: hidden;
+		overflow-y: auto;
+		scrollbar-width: none;
+	}
+
+	.ant-list-item:first-of-type {
+		padding-top: 0;
 	}
 
 	&__item {
